fix: remove card svg from uio contrast options

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,21 +1,46 @@
 // Mixins.
-@mixin focus-style($c) {
+@mixin uio-focus-style($c) {
+	a[href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home"],
+	a[href="https://idrc.ocadu.ca/"],
+	a[href="https://ocadu.ca/"] {
+		padding: rem(5);
+	}
+
 	a:focus,
 	a:hover,
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:hover,
 	#defaultContainer .content-wrapper .tags-info .tags a:focus,
 	#defaultContainer .content-wrapper .tags-info .tags a:hover,
-	.search-container:focus,
-	.search-container:hover,
+	#search-form input:focus,
+	#search-form input:hover,
 	.card:focus,
 	.card:hover {
-		// border: rem(2) solid $c;
 		box-shadow: inset 0 0 0 rem(2) $c;
 	}
 
-	a[href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home"]:focus,
-	a[href="https://www.ic.gc.ca/eic/site/118.nsf/eng/home"]:hover {
-		box-shadow: inset 0 0 0 rem(8) $c;
+	#defaultContainer .content-wrapper .pagination .pagination-list {
+		.pagination-next,
+		.pagination-previous {
+			box-shadow: none;
+		}
+	}
+
+	.blue,
+	.green,
+	.yellow {
+		background-image: none;
+	}
+
+	li .pagination-link,
+	li .pagination-link::before {
+		box-shadow: 0 0 0 rem(2) $c inset;
+	}
+
+	li a[aria-current="page"], // TODO: get inner and outer dashed border to overlap
+	li a[aria-current="page"]::before {
+		border: rem(1) $c;
+		border-style: dashed;
+		box-shadow: none;
 	}
 }
